--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -108,11 +108,13 @@
     <ClInclude Include="Runtime\D3D12RHI\D3D12PlatformRHI.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Resource.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12ResourceView.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12Rootsignature.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Texture.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12View.h" />
-    <ClInclude Include="Runtime\D3D12RHI\DX12GIAdapter.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12Viewport.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12Adapter.h" />
     <ClInclude Include="Runtime\D3D12RHI\XD3D12CommandListManger.h" />
-    <ClInclude Include="Runtime\D3D12RHI\XTTTTTT.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.h" />
     <ClInclude Include="Runtime\HAL\PlatformTypes.h" />
     <ClInclude Include="Runtime\RenderCore\Shader.h" />
     <ClInclude Include="Runtime\HAL\Mch.h" />
@@ -141,9 +143,11 @@
     <ClCompile Include="Runtime\D3D12RHI\D3D12PassStateManager.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PhysicDevice.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Resource.cpp" />
-    <ClCompile Include="Runtime\D3D12RHI\DX12GIAdapter.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12Rootsignature.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12Viewport.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12Adapter.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\XD3D12CommandListManger.cpp" />
-    <ClCompile Include="Runtime\D3D12RHI\XTTTTTT.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.cpp" />
     <ClCompile Include="Runtime\RenderCore\Shader.cpp" />
     <ClCompile Include="UnitTest\GameTimer.cpp" />
     <ClCompile Include="UnitTest\GeometryGenerator.cpp" />
