--- a/Source/project_xengine.vcxproj.filters
+++ b/Source/project_xengine.vcxproj.filters
@@ -52,7 +52,7 @@
     <ClInclude Include="Runtime\D3D12RHI\D3D12Texture.h">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClInclude>
-    <ClInclude Include="Runtime\D3D12RHI\DX12GIAdapter.h">
+    <ClInclude Include="Runtime\D3D12RHI\D3D12Adapter.h">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClInclude>
     <ClInclude Include="Runtime\D3D12RHI\XD3D12CommandListManger.h">
@@ -93,10 +93,12 @@
     <ClInclude Include="File\LoadDDSTexture.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12DescArrayShaderAcesss.h" />
     <ClInclude Include="Runtime\RenderCore\Shader.h" />
-    <ClInclude Include="Runtime\D3D12RHI\XTTTTTT.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.h" />
     <ClInclude Include="Runtime\RHI\RHI.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PassStateManager.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12View.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12Viewport.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12Rootsignature.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrateApp.cpp" />
@@ -119,7 +121,7 @@
     <ClCompile Include="Runtime\D3D12RHI\D3D12PhysicDevice.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
-    <ClCompile Include="Runtime\D3D12RHI\DX12GIAdapter.cpp">
+    <ClCompile Include="Runtime\D3D12RHI\D3D12Adapter.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\D3D12RHI\XD3D12CommandListManger.cpp">
@@ -144,7 +146,9 @@
     <ClCompile Include="Runtime\D3D12RHI\D3D12Resource.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12DescArrayShaderAcesss.cpp" />
     <ClCompile Include="Runtime\RenderCore\Shader.cpp" />
-    <ClCompile Include="Runtime\D3D12RHI\XTTTTTT.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PassStateManager.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12Viewport.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12Rootsignature.cpp" />
   </ItemGroup>
 </Project>
