--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -95,19 +95,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="File\LoadTGATexture.h" />
+    <ClInclude Include="File\stb_image.h" />
     <ClInclude Include="FrameResource.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12AbstractDevice.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Allocation.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12CommandList.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12CommandQueue.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Context.h" />
-    <ClInclude Include="Runtime\D3D12RHI\D3D12DescArrayShaderAcesss.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArray.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12DescriptorArray.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PassStateManager.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PhysicDevice.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PlatformRHI.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Resource.h" />
-    <ClInclude Include="Runtime\D3D12RHI\D3D12ResourceView.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Rootsignature.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Texture.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12View.h" />
@@ -121,6 +122,7 @@
     <ClInclude Include="Runtime\RHI\PlatformRHI.h" />
     <ClInclude Include="Runtime\RHI\RHI.h" />
     <ClInclude Include="Runtime\RHI\RHIContext.h" />
+    <ClInclude Include="Runtime\RHI\RHIResource.h" />
     <ClInclude Include="UnitTest\GameTimer.h" />
     <ClInclude Include="UnitTest\GeometryGenerator.h" />
     <ClInclude Include="File\LoadDDSTexture.h" />
@@ -132,13 +134,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrateApp.cpp" />
-    <ClCompile Include="FrameResource.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12AbstractDevice.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Allocation.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12CommandList.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12CommandQueue.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Context.cpp" />
-    <ClCompile Include="Runtime\D3D12RHI\D3D12DescArrayShaderAcesss.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArray.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12DescriptorArray.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PassStateManager.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PhysicDevice.cpp" />
