--- a/Source/project_xengine.vcxproj.filters
+++ b/Source/project_xengine.vcxproj.filters
@@ -46,9 +46,6 @@
     <ClInclude Include="Runtime\D3D12RHI\D3D12Resource.h">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClInclude>
-    <ClInclude Include="Runtime\D3D12RHI\D3D12ResourceView.h">
-      <Filter>Runtime\D3D12RHI</Filter>
-    </ClInclude>
     <ClInclude Include="Runtime\D3D12RHI\D3D12Texture.h">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClInclude>
@@ -91,7 +88,7 @@
     <ClInclude Include="xtrack_new.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Allocation.h" />
     <ClInclude Include="File\LoadDDSTexture.h" />
-    <ClInclude Include="Runtime\D3D12RHI\D3D12DescArrayShaderAcesss.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArray.h" />
     <ClInclude Include="Runtime\RenderCore\Shader.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.h" />
     <ClInclude Include="Runtime\RHI\RHI.h" />
@@ -99,10 +96,12 @@
     <ClInclude Include="Runtime\D3D12RHI\D3D12View.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Viewport.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Rootsignature.h" />
+    <ClInclude Include="Runtime\RHI\RHIResource.h" />
+    <ClInclude Include="File\stb_image.h" />
+    <ClInclude Include="File\LoadTGATexture.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrateApp.cpp" />
-    <ClCompile Include="FrameResource.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12AbstractDevice.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
@@ -144,7 +143,7 @@
     </ClCompile>
     <ClCompile Include="Runtime\D3D12RHI\D3D12Allocation.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Resource.cpp" />
-    <ClCompile Include="Runtime\D3D12RHI\D3D12DescArrayShaderAcesss.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArray.cpp" />
     <ClCompile Include="Runtime\RenderCore\Shader.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PassStateManager.cpp" />
