--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -116,18 +116,18 @@
     <ClInclude Include="Runtime\D3D12RHI\D3D12Adapter.h" />
     <ClInclude Include="Runtime\D3D12RHI\XD3D12CommandListManger.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.h" />
+    <ClInclude Include="Runtime\DataStruct\XRefCountPtr.h" />
     <ClInclude Include="Runtime\HAL\PlatformTypes.h" />
     <ClInclude Include="Runtime\RenderCore\Shader.h" />
     <ClInclude Include="Runtime\HAL\Mch.h" />
     <ClInclude Include="Runtime\RHI\PlatformRHI.h" />
     <ClInclude Include="Runtime\RHI\RHI.h" />
     <ClInclude Include="Runtime\RHI\RHIContext.h" />
+    <ClInclude Include="Runtime\RHI\RHIDefines.h" />
     <ClInclude Include="Runtime\RHI\RHIResource.h" />
     <ClInclude Include="UnitTest\GameTimer.h" />
     <ClInclude Include="UnitTest\GeometryGenerator.h" />
-    <ClInclude Include="File\LoadDDSTexture.h" />
     <ClInclude Include="UnitTest\MathHelper.h" />
-    <ClInclude Include="UnitTest\UploadBuffer.h" />
     <ClInclude Include="UnitTest\d3dApp.h" />
     <ClInclude Include="UnitTest\d3dUtil.h" />
     <ClInclude Include="xtrack_new.h" />
