--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -95,13 +95,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Core\AlignmentTemplates.h" />
     <ClInclude Include="File\LoadTGATexture.h" />
     <ClInclude Include="File\stb_image.h" />
     <ClInclude Include="FrameResource.h" />
+    <ClInclude Include="Runtime\Core\XMath.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12AbstractDevice.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Allocation.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12CommandList.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12CommandQueue.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12Common.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Context.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArray.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12DescriptorArray.h" />
@@ -117,6 +120,7 @@
     <ClInclude Include="Runtime\D3D12RHI\XD3D12CommandListManger.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.h" />
     <ClInclude Include="Runtime\DataStruct\XRefCountPtr.h" />
+    <ClInclude Include="Runtime\Engine\SceneView.h" />
     <ClInclude Include="Runtime\HAL\PlatformTypes.h" />
     <ClInclude Include="Runtime\RenderCore\Shader.h" />
     <ClInclude Include="Runtime\HAL\Mch.h" />
@@ -134,6 +138,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrateApp.cpp" />
+    <ClCompile Include="Runtime\Core\XMath.cpp" />
+    <ClCompile Include="Runtime\Core\XMathcpp.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12AbstractDevice.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Allocation.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12CommandList.cpp" />
@@ -149,6 +155,7 @@
     <ClCompile Include="Runtime\D3D12RHI\D3D12Adapter.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\XD3D12CommandListManger.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.cpp" />
+    <ClCompile Include="Runtime\Engine\SceneView.cpp" />
     <ClCompile Include="Runtime\RenderCore\Shader.cpp" />
     <ClCompile Include="UnitTest\GameTimer.cpp" />
     <ClCompile Include="UnitTest\GeometryGenerator.cpp" />
